--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,27 @@ li{
   content: "";
 }
 
+.content-home-heading-des{
+  font-weight: 500;
+  margin: 120px auto 105px;
+  text-align: center;
+  color: #383838;
+  font-size: 2.5em;
+  border: 4px solid transparent;
+  position: relative;
+}
+
+.content-home-heading-des:hover::before{
+  border-bottom: 4px solid #F5BD41;
+  width: 100%;
+  max-width: 100px;
+  position: absolute;
+  left: 50%;
+  top:72px;
+  transform: translateX(-50%);
+  content: "";
+}
+
 
 .underline:before {
   content: "";
@@ -424,6 +445,11 @@ figure{
   border-radius: 50%;
   text-align: center;
   box-shadow: 2px 1px 5px;
+}
+
+.order-class{
+  display: flex;
+  flex-direction: column;
 }
 
 /* The best destinations */
@@ -508,6 +534,10 @@ figure{
   height: 200px;
   display: flex;
   width: 100%;
+}
+
+.sign-up-order{
+  margin: 0;
 }
 
 .profile-user{
@@ -599,7 +629,7 @@ h3{
 
 .button-img-s-s{
   transform: rotate(90deg);
-margin: -5px;
+  margin: -5px;
 }
 
 .profile-clouse{
@@ -624,7 +654,6 @@ margin: -5px;
 
 .reviews-width{
   max-width: 1232px;
-  width: 100%;
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -633,6 +662,7 @@ margin: -5px;
 .content-reviews{
   max-width: 400px;
   background: #EAF0F9;
+  margin: 0 8px;
 }
 
 .location{
@@ -751,7 +781,7 @@ margin: -5px;
 
 .button-imgss{
   position: absolute;
-  right: -1.5%;
+  right: -2%;
   transform :translateY(450%);
   font-size: 16px;
   padding: 4px 4px;
@@ -854,25 +884,57 @@ footer{
     display: none;
   }
 
+  .sign-up-order{
+    order: 1;
+  }
+
+  .mob-profile-bg{
+    background-color: #ffffff;
+  }
+
+
+
+  .content-home-heading-mob{
+    font-weight: 500;
+    margin: 0;
+    text-align: center;
+    color: #383838;
+    border: 4px solid transparent;
+    position: relative;
+    font-size: 28px;
+    line-height: 33px;
+    padding: 40px 0 32px;
+  }
+
   .content-home-img-fig{
     padding-top: 8px;
     font-size: 12px;
     line-height: 14px;
+    text-align: start;
   }
 
   .content-home-img-p{
     margin: 0;
     font-size: 12px;
     line-height: 14px;
+    text-align: start;
   }
 
-  .content-home-heading{
+  .content-home-heading-des{
     font-weight: 500;
-    margin: 24px auto 37px;
+    margin: 0;
     text-align: center;
     color: #383838;
     border: 4px solid transparent;
     position: relative;
+    font-size: 28px;
+    line-height: 33px;
+    padding: 40px 0 32px;
+    display: none;
+  }
+
+  .content-home-heading{
+    margin: 40px 0;
     font-size: 28px;
     line-height: 33px;
   }
@@ -892,8 +954,6 @@ footer{
     border-bottom: 6px solid #ffffff;
   }
 
-
-
   .button-imgs{
     transform: translateX(5%) !important;
     top: 78px;
@@ -905,26 +965,129 @@ footer{
     display: none;
   }
 
+  .location-p p{
+    font-size:15px;
+    white-space: nowrap;
+  }
+
   .button-imgss{
     display: none;
   }
 
+  .reviews{
+    padding: 0;
+  }
+
+  .hotel img{
+    width: 325px;
+    height: auto;
+  }
+
+  .users-reviews-img{
+    width: 44px;
+    height: 44px;
+  }
+
+  .users-reviews h4{
+    font-size: 15px;
+    line-height: 18px;
+    padding: 0;
+  }
+
+  .users-country figcaption{
+    font-size: 15px;
+  }
+
+  .reviews-width{
+
+  }
+
+  .content-reviews{
+    height: 656px;
+
+    width: 328px;
+  }
+
+  .guests-bg{
+    background: #EAF0F9;
+  }
+
   #users-country-reviews{
-    padding: 22px 24px 32px 24px;
+    padding: 20px 0;
+    font-size: 15px;
+  }
+
+  #users-data{
+    padding-left: 12px;
+  }
+
+  .location-p{
+    padding-left: 0;
+  }
+
+  .estimation{
+    padding:0;
+    margin: 0;
+  }
+
+  .location{
+    margin-top: 15px;
+  }
+
+  .estimation img{
+    width: 47px;
+    height: auto;
+  }
+
+  .hotel  p{
+    display: none;
+  }
+
+  .hotel figcaption{
+    display: none;
+  }
+
+  .users-reviews{
+    padding: 0;
+    margin-top: 16px;
+    align-items: center;
   }
 
   .btn-group{
-display: flex;
+    display: flex;
     justify-content: center;
-    padding-bottom: 40px;
+    padding:20px 0;
+  }
+  .btn-group-custom {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
   }
 
-  #rb{
-    width: 9px;
+  .btn-group-custom:checked+label::before {
+    border-color:  #333333;
+    background-color:  #333333;
   }
+
+
+  .btn-group-custom+label::before{
+    content: '';
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid  #333333;
+    border-radius: 50%;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+  }
+
 
   .btn-group input{
-    margin: 0;
+    margin: 0 8px;
   }
 
   .btn-group label{
@@ -971,12 +1134,12 @@ display: flex;
 
   .tabs-button{
     margin: 0;
-    height: 64px;
+    height: 34px;
     background-color: #ffffff;
     border: 1px solid  #F3F3F4;
     border-radius: 4px;
     font-weight: 400;
-    font-size: 1.5em;
+    font-size: 1.1em;
     line-height: 1.75em;
     color: #383838;
     text-align: center;
@@ -987,20 +1150,20 @@ display: flex;
     justify-content: space-between;
     max-width: 100%;
   }
-#content-button-imgs{
-  width: 28px !important;
-  height: 28px !important;
-  top:34%;
-  left: 93.6% !important;
-  transform: translateY(31%) !important;
-}
+  #content-button-imgs{
+    width: 28px !important;
+    height: 28px !important;
+    top:34%;
+    left: 93.6% !important;
+    transform: translateY(31%) !important;
+  }
 
-.content-home-img{
-  margin-bottom: 40px !important;
-}
-/*sing up*/
+  .content-home-img{
+    margin-bottom: 40px !important;
+  }
+  /*sing up*/
   .profile{
-display: none;
+    display: none;
   }
 
 }
@@ -1020,9 +1183,9 @@ display: none;
     display: none;
   }
 
-    .button-places:before {
-      content: "Places"
-    }
+  .button-places:before {
+    content: "Places"
+  }
 
   .container-img{
     -webkit-filter: grayscale(0%);
@@ -1049,12 +1212,12 @@ display: none;
     transform: translateY(311%) !important;
   }
 
-.button-img-s-s{
-  transform: rotate(360deg);
-  height: 18px;
-  width: 7px;
-  padding-bottom: 3px;
-}
+  .button-img-s-s{
+    transform: rotate(360deg);
+    height: 18px;
+    width: 7px;
+    padding-bottom: 3px;
+  }
 
   .tabs{
     background-color: transparent;
@@ -1071,7 +1234,10 @@ display: none;
   .tabs:focus{
     background-color: #3077C6;
   }
-  }
+
+
+
+}
 
 @media  screen and (max-width: 992px) {
 
@@ -1100,9 +1266,9 @@ display: none;
   }
 
   .content-button-imgs{
-  left: 95.6%;
-  transform: translateY(308%);
-}
+    left: 95.6%;
+    transform: translateY(308%);
+  }
   .button-img-s-s {
     transform: rotate(360deg);
     margin: -5px;
@@ -1113,6 +1279,10 @@ display: none;
 
   figure .img{
     width: 60%;
+  }
+
+  .fig-1220{
+    display: none;
   }
 
 }
@@ -1127,7 +1297,6 @@ display: none;
   .footer-about{
     padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1200 - 320)));
   }
-
 
   #content-reviews{
 
@@ -1148,6 +1317,14 @@ display: none;
   }
 
   .mob-profile {
+    display: none;
+  }
+
+  .content-home-heading-mob{
+    display: none;
+  }
+
+  .btn-group{
     display: none;
   }
 
