--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @import url("./fonts.css");
 * {
   box-sizing: border-box;
-  /*max-width: 1440px;*/
   margin: 0 auto;
 }
 
@@ -14,8 +13,6 @@ body {
 /*Discover stays to live, work or just relax*/
 .discover-bg{
   background-image: url("../img/bg-main-section.svg");
-  /*background-position: top center;*/
-  /*background-repeat: no-repeat;*/
   background-size: cover;
   width: 100%;
   color: #ffffff;
@@ -344,6 +341,26 @@ li{
   position: relative;
 }
 
+.content-home-heading-nh{
+  font-weight: 500;
+  margin: 120px auto 105px;
+  text-align: center;
+  color: #383838;
+  font-size: 2.5em;
+  border: 4px solid transparent;
+  position: relative;
+}
+
+.content-home-heading-mob{
+  font-weight: 500;
+  margin: 120px auto 105px;
+  text-align: center;
+  color: #383838;
+  font-size: 2.5em;
+  border: 4px solid transparent;
+  position: relative;
+}
+
 .content-home-heading:hover::before{
   border-bottom: 4px solid #F5BD41;
   width: 100%;
@@ -354,6 +371,8 @@ li{
   transform: translateX(-50%);
   content: "";
 }
+
+
 
 .content-home-heading-des{
   font-weight: 500;
@@ -498,16 +517,22 @@ figure{
   position: relative;
 }
 
-.container-img{
+/*.container-img{
   -webkit-filter: grayscale(75%);
   filter: grayscale(75%);
-  /* opacity: 0.5;*/
+   opacity: 0.5;
+/*/
+
+.img-bg {
+  background: #000;
+  height: 295px;
+  position:relative;
 }
 
-.btn{
+.block{
   position: absolute;
-  bottom: 50%;
-  left: 30%;
+  bottom: 40%;
+  left: 27%;
   background-color: #FFFFFF;
   padding: 12px 24px;
   cursor: pointer;
@@ -518,6 +543,27 @@ figure{
   font-size: 1.1em;
   line-height: 1.3em;
   color: #3077C6;
+  display: none;
+}
+
+.container-btn img{
+  opacity: 1;
+  transition: opacity 124ms linear, transform 124ms linear;
+}
+
+.container-btn:hover  img{
+  opacity: 0.6;
+  background: #000;
+}
+
+.btn{
+  font-size: 1.1em;
+  color: #3077C6;
+}
+
+
+.img-bg:hover .block{
+  display: block;
 }
 /*sing up*/
 
@@ -542,7 +588,7 @@ figure{
   padding-left: 24px;
 }
 
-.profile-p-b{
+.profile-header{
   margin: auto 0;
   padding-left: 40px;
 }
@@ -585,7 +631,7 @@ h3{
   height: 58px;
 }
 
-.mob-profile-h-a{
+.mob-profile-header{
   display: flex;
 }
 
@@ -643,6 +689,7 @@ h3{
 
 .reviews{
   max-width: 1440px;
+  width: 100%;
   margin: 0  auto;
   display: flex;
   justify-content: center;
@@ -650,22 +697,25 @@ h3{
 }
 
 .reviews-width{
-  max-width: 1232px;
+  max-width: 1332px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   position: relative;
+  padding: 0 20px;
 }
 
 .content-reviews{
   max-width: 400px;
+  width: 100%;
   background: #EAF0F9;
   margin: 0 8px;
 }
 
 .location{
   display: flex;
-  width: 400px;
-  max-width: 100%;
+  max-width: 400px;
+  width: 100%;
   justify-content: space-between;
   margin-top: 24px;
 }
@@ -678,21 +728,30 @@ h3{
   justify-content: space-between;
 }
 
-.location-p p{
+.normal-text{
   margin: 0;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 18px;
   line-height: 21px;
   color: #3077C6;
 }
 
+.p-bold{
+  font-weight: 500;
+  color: #3077C6;
+  font-size: 18px;
+  line-height: 21px;
+  margin: 0;
+}
+
 .estimation{
   text-align: end;
-  padding-right: 24px;
+  margin: 0 24px;
 }
 
 .estimation p{
   color:#BFBFBF;
+  font-size: 14px;
 }
 
 .hotel{
@@ -702,6 +761,7 @@ h3{
 
 .hotel img{
   vertical-align: middle;
+  width: 100%;
 }
 .hotel figcaption{
   position: absolute;
@@ -736,11 +796,6 @@ h3{
   margin: 0;
 }
 
-/*figure img{*/
-/*  max-width: 100%;*/
-/*  width: 400px;*/
-/*}*/
-
 .users-reviews h4{
   font-weight: 400;
   font-size: 18px;
@@ -763,7 +818,7 @@ h3{
 
 .users-country-reviews{
   font-weight: 400;
-  font-size: 19px;
+  font-size: 18px;
   line-height: 21px;
   color: #383838;
   padding: 22px 24px 66px 24px;
@@ -778,8 +833,8 @@ h3{
 
 .button-imgss{
   position: absolute;
-  right: -2%;
-  transform :translateY(450%);
+  right: 1%;
+  transform :translateY(420%);
   font-size: 16px;
   padding: 4px 4px;
   width: 40px;
@@ -889,8 +944,6 @@ footer{
     background-color: #ffffff;
   }
 
-
-
   .content-home-heading-mob{
     font-weight: 500;
     margin: 0;
@@ -931,6 +984,12 @@ footer{
   }
 
   .content-home-heading{
+    margin: 40px 0;
+    font-size: 28px;
+    line-height: 33px;
+  }
+
+  .content-home-heading-nh{
     margin: 40px 0;
     font-size: 28px;
     line-height: 33px;
@@ -995,13 +1054,21 @@ footer{
     font-size: 15px;
   }
 
-  .reviews-width{
+  .img-bg{
+    height: 180px;
+  }
 
+  .block{
+    font-size: 8px;
+    padding: 8px 18px;
+  }
+
+  .reviews-width{
+   margin: 0 125px;
   }
 
   .content-reviews{
     height: 656px;
-
     width: 328px;
   }
 
@@ -1053,8 +1120,13 @@ footer{
   .btn-group{
     display: flex;
     justify-content: center;
-    padding:20px 0;
+    padding-top: 24px;
   }
+
+  .content-home-heading:hover::before{
+    top: 50px;
+  }
+
   .btn-group-custom {
     position: absolute;
     z-index: -1;
@@ -1081,7 +1153,6 @@ footer{
     background-position: center center;
     background-size: 50% 50%;
   }
-
 
   .btn-group input{
     margin: 0 8px;
@@ -1164,6 +1235,7 @@ footer{
   }
 
 }
+
 @media  screen and (max-width: 768px) {
   section {
     width: 100%;
@@ -1189,10 +1261,6 @@ footer{
     filter: grayscale(0%);
   }
 
-  .btn{
-    display: none;
-  }
-
   .content-button-imgs{
     position: absolute;
     background: #EAF0F9;
@@ -1205,7 +1273,7 @@ footer{
     border-radius: 50%;
     text-align: center;
     box-shadow: 2px 5px 5px ;
-    left: 93.6% !important;
+    left: 93.6%;
     transform: translateY(311%) !important;
   }
 
@@ -1217,7 +1285,6 @@ footer{
   }
 
   .tabs{
-    background-color: transparent;
     justify-content: space-between;
     max-width: 600px;
     margin: 24px 0;
@@ -1232,96 +1299,136 @@ footer{
     background-color: #3077C6;
   }
 
-
-
-}
-
-@media  screen and (max-width: 992px) {
-
-  section {
-    width: 100%;
-    overflow-x:hidden;
-    overflow-y:hidden
-  }
-  /*Homes guests loves-*/
-
-  .button-imgs{
-    left: 95.6%;
-    transform: translateY(308%);
   }
 
-  /* footer */
-  .footer-about{
-    padding: 120px 6% 0;
-  }
-  .otdelni{
-    padding: 0 5px;
+  @media  screen and (max-width: 992px) {
+
+    section {
+      width: 100%;
+      overflow-x:hidden;
+      overflow-y:hidden
+    }
+    /*Homes guests loves-*/
+
+    .button-imgs{
+      left: 95.6%;
+      transform: translateY(308%);
+    }
+
+    /* footer */
+    .footer-about{
+      padding: 120px 6% 0;
+    }
+    .otdelni{
+      padding: 0 5px;
+    }
+
+    .triphouse{
+      margin: 0 10%;
+    }
+
+    .content-button-imgs{
+      left: 95.6%;
+      transform: translateY(308%);
+    }
+    .button-img-s-s {
+      transform: rotate(360deg);
+      margin: -5px;
+    }
+    .figcap-768 {
+      display: none;
+    }
+
+    figure .img{
+      width: 60%;
+    }
+
+    .fig-1220{
+      display: none;
+    }
+
+    .reviews-width{
+      width: 670px;
+      padding: 0 20px;
+    }
+
+    .reviews{
+      background-color:#EAF0F9;
+    }
+
+    .content-reviews{
+      width: 300px;
+    }
+
   }
 
-  .triphouse{
-    margin: 0 10%;
+  @media screen and (max-width: 1220px) {
+    /*Homes guests loves-*/
+
+    .figcap-1220 {
+      display: none;
+    }
+    /* footer */
+    .footer-about{
+      padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1200 - 320)));
+    }
+
+    .p-bold {
+      font-size: 16px;
+      white-space: nowrap;
+    }
+
+    .normal-text{
+      font-size: 14px;
+      white-space: nowrap;
+    }
+
+  .estimation p{
+    white-space: nowrap;
+    font-size: 11px;
+     margin-top: 3px;
+    }
+
+  .hotel img{
+    width: 300px;
   }
 
-  .content-button-imgs{
-    left: 95.6%;
-    transform: translateY(308%);
-  }
-  .button-img-s-s {
-    transform: rotate(360deg);
-    margin: -5px;
-  }
-  .figcap-768 {
-    display: none;
+  .content-reviews-img{
+    width: 300px;
   }
 
-  figure .img{
-    width: 60%;
+    .button-imgss{
+      transform :translateY(300%);
+    }
+
+    }
+
+  @media screen and (max-width: 2645px) and (min-width:575px) {
+
+    /* footer */
+    .triphouse {
+      padding: 0 1% 120px;
+    }
+
+    /*Homes guests loves-*/
+    .heading-homes {
+      padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1440 - 320)));
+    }
+
+    .mob-profile-bg{
+      display: none;
+    }
+
+    .content-home-heading-mob{
+      display: none;
+    }
+
+    .btn-group{
+      display: none;
+    }
+
+    .bold {
+      font-weight: 600;
+    }
+
   }
-
-  .fig-1220{
-    display: none;
-  }
-
-}
-
-@media screen and (max-width: 1220px) {
-  /*Homes guests loves-*/
-
-  .figcap-1220 {
-    display: none;
-  }
-  /* footer */
-  .footer-about{
-    padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1200 - 320)));
-  }
-
-}
-
-@media screen and (max-width: 3645px) and (min-width:575px) {
-
-  /* footer */
-  .triphouse {
-    padding: 0 1% 120px;
-  }
-
-  /*Homes guests loves-*/
-  .heading-homes {
-    padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1440 - 320)));
-  }
-
-  .mob-profile {
-    display: none;
-  }
-
-  .content-home-heading-mob{
-    display: none;
-  }
-
-  .btn-group{
-    display: none;
-  }
-
-  .bold {
-    font-weight: 600;
-  }
-}
