--- a/css/style.css
+++ b/css/style.css
@@ -372,8 +372,6 @@ li{
   content: "";
 }
 
-
-
 .content-home-heading-des{
   font-weight: 500;
   margin: 120px auto 105px;
@@ -394,7 +392,6 @@ li{
   transform: translateX(-50%);
   content: "";
 }
-
 
 .underline:before {
   content: "";
@@ -517,12 +514,6 @@ figure{
   position: relative;
 }
 
-/*.container-img{
-  -webkit-filter: grayscale(75%);
-  filter: grayscale(75%);
-   opacity: 0.5;
-/*/
-
 .img-bg {
   background: #000;
   height: 295px;
@@ -551,7 +542,7 @@ figure{
   transition: opacity 124ms linear, transform 124ms linear;
 }
 
-.container-btn:hover  img{
+.img-bg:hover  img{
   opacity: 0.6;
   background: #000;
 }
@@ -560,7 +551,6 @@ figure{
   font-size: 1.1em;
   color: #3077C6;
 }
-
 
 .img-bg:hover .block{
   display: block;
@@ -731,16 +721,16 @@ h3{
 .normal-text{
   margin: 0;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
+  font-size: 1.1em;
+  line-height: 1.3em;
   color: #3077C6;
 }
 
 .p-bold{
   font-weight: 500;
   color: #3077C6;
-  font-size: 18px;
-  line-height: 21px;
+  font-size: 1.1em;
+  line-height: 1.3em;
   margin: 0;
 }
 
@@ -776,8 +766,8 @@ h3{
 .hotel p{
   padding: 16px;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
+  font-size: 1.1em;
+  line-height: 1.3em;
   color: #FFFFFF;
 }
 
@@ -798,8 +788,8 @@ h3{
 
 .users-reviews h4{
   font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
+  font-size: 1.1em;
+  line-height: 1.3em;
   color: #383838;
   padding: 8px 0;
 }
@@ -807,19 +797,20 @@ h3{
 .users-reviews figure{
   display: flex;
   margin: 0;
+  align-items: center;
 }
 
 .users-country figcaption{
   color: #BFBFBF;
-  font-size: 18px;
-  line-height: 21px;
+  font-size: 1.1em;
+  line-height: 1.3em;
   margin: 0 6px;
 }
 
 .users-country-reviews{
   font-weight: 400;
-  font-size: 18px;
-  line-height: 21px;
+  font-size: 1.1em;
+  line-height: 1.3em;
   color: #383838;
   padding: 22px 24px 66px 24px;
 }
@@ -835,7 +826,7 @@ h3{
   position: absolute;
   right: 1%;
   transform :translateY(420%);
-  font-size: 16px;
+  font-size: 1em;
   padding: 4px 4px;
   width: 40px;
   height: 40px;
@@ -909,13 +900,36 @@ footer{
   margin: 0;
 }
 
+@media screen and (max-width: 322px){
+  .container-btn #img-bg {
+    max-height: 150px;
+  }
+
+  .container-btn #img--bg {
+    max-height: 150px;
+  }
+
+}
+
+@media screen and (max-width: 360px){
+
+  #img-bg {
+    max-height: 169px;
+  }
+
+  #img--bg {
+    max-height: 169px;
+  }
+}
+
 @media  screen and (max-width:575px){
   section{
     overflow-x:hidden;
     overflow-y: hidden;
   }
   .content-home-img figure img{
-    width: 180px;
+    max-width: 180px;
+    width: 100%;
   }
   /*Discover stays to live, work or just relax*/
   #advantages {
@@ -951,22 +965,22 @@ footer{
     color: #383838;
     border: 4px solid transparent;
     position: relative;
-    font-size: 28px;
-    line-height: 33px;
+    font-size: 1.7em;
+    line-height: 2em;
     padding: 40px 0 32px;
   }
 
   .content-home-img-fig{
     padding-top: 8px;
-    font-size: 12px;
-    line-height: 14px;
+    font-size: 0.7em;
+    line-height: 0.8em;
     text-align: start;
   }
 
   .content-home-img-p{
     margin: 0;
-    font-size: 12px;
-    line-height: 14px;
+    font-size: 0.7em;
+    line-height: 0.8em;
     text-align: start;
   }
 
@@ -977,22 +991,22 @@ footer{
     color: #383838;
     border: 4px solid transparent;
     position: relative;
-    font-size: 28px;
-    line-height: 33px;
+    font-size: 1.7em;
+    line-height: 2em;
     padding: 40px 0 32px;
     display: none;
   }
 
   .content-home-heading{
     margin: 40px 0;
-    font-size: 28px;
-    line-height: 33px;
+    font-size: 1.7em;
+    line-height: 2em;
   }
 
   .content-home-heading-nh{
     margin: 40px 0;
-    font-size: 28px;
-    line-height: 33px;
+    font-size: 1.7em;
+    line-height: 2em;
   }
 
   figure{
@@ -1010,9 +1024,9 @@ footer{
     border-bottom: 6px solid #ffffff;
   }
 
-  .button-imgs{
-    transform: translateX(5%) !important;
-    top: 78px;
+  #button-imgs{
+    left: 94.5%;
+    transform: translateY(280%);
     width: 28px;
     height: 28px;
   }
@@ -1045,21 +1059,22 @@ footer{
   }
 
   .users-reviews h4{
-    font-size: 15px;
-    line-height: 18px;
+    font-size: 0.9em;
+    line-height: 1.1em;
     padding: 0;
   }
 
   .users-country figcaption{
-    font-size: 15px;
+    font-size: 0.9em;
   }
 
   .img-bg{
-    height: 180px;
+   max-height: 177px;
+    width: 100%;
   }
 
   .block{
-    font-size: 8px;
+    font-size: 0.5em;
     padding: 8px 18px;
   }
 
@@ -1144,8 +1159,6 @@ footer{
     display: inline-block;
     width: 8px;
     height: 8px;
-    flex-shrink: 0;
-    flex-grow: 0;
     border: 1px solid  #333333;
     border-radius: 50%;
     margin-right: 0.5em;
@@ -1183,14 +1196,10 @@ footer{
     font-size: 15px;
   }
 
-  .otdelni{
-    margin: 0;
-  }
-
   .triphouse {
     display: flex;
     justify-content: center;
-    padding-bottom: 40px !important;
+    padding-bottom: 40px ;
   }
 
   .triphouse-p{
@@ -1219,15 +1228,15 @@ footer{
     max-width: 100%;
   }
   #content-button-imgs{
-    width: 28px !important;
-    height: 28px !important;
+    width: 28px ;
+    height: 28px ;
     top:34%;
-    left: 93.6% !important;
-    transform: translateY(31%) !important;
+    left: 93.6% ;
+    transform: translateY(31%);
   }
 
   .content-home-img{
-    margin-bottom: 40px !important;
+    margin-bottom: 40px;
   }
   /*sing up*/
   .profile{
@@ -1244,9 +1253,9 @@ footer{
   }
   /*Homes guests loves-*/
 
-  #button-imgs{
-    left: 93.6%;
-    transform: translateY(308%);
+  .button-imgs{
+    left: 95.5%;
+    transform: translateY(314%);
   }
   .figcap-768{
     display: none;
@@ -1274,7 +1283,7 @@ footer{
     text-align: center;
     box-shadow: 2px 5px 5px ;
     left: 93.6%;
-    transform: translateY(311%) !important;
+    transform: translateY(311%) ;
   }
 
   .button-img-s-s{
@@ -1408,11 +1417,6 @@ footer{
     /* footer */
     .triphouse {
       padding: 0 1% 120px;
-    }
-
-    /*Homes guests loves-*/
-    .heading-homes {
-      padding: calc(20px + (50 - 20) * ((100vw - 320px) / (1440 - 320)));
     }
 
     .mob-profile-bg{
